         (Sergio).
20121010 configure.ac: rename configure.in to configure.ac as that is the new
         standard (Fred).
20121010 Makefile.am,compat/amiga/Makefile.am,compat/linux/Makefile.am,
         compat/morphos/Makefile.am,compat/unix/Makefile.am,
         compat/wii/Makefile.am,compat/win32/Makefile.am,debugger/Makefile.am,
         machines/Makefile.am,peripherals/Makefile.am,
         peripherals/disk/Makefile.am,peripherals/flash/Makefile.am,
         peripherals/ide/Makefile.am,peripherals/nic/Makefile.am,
         pokefinder/Makefile.am,sound/Makefile.am,timer/Makefile.am,
         ui/fb/Makefile.am,ui/gtk/Makefile.am,ui/scaler/Makefile.am,
         ui/sdl/Makefile.am,ui/svga/Makefile.am,ui/widget/Makefile.am,
         ui/wii/Makefile.am,ui/win32/Makefile.am,ui/xlib/Makefile.am,
         unittests/Makefile.am,z80/Makefile.am: migrate INCLUDES to AM_CPPFLAGS
         (Fred).
20121011 acinclude.m4: remove obsolete GLIB 1.x and GTK 1.x autoconf macros
         (more from patch #3575831) (Sergio).
20121011 configure.ac: don't use AC_OUTPUT with parameters (more from patch
         #3575831) (Sergio).
20121011 ui/gtk/pokemem.c: fix typo (Fred).
20121015 ui/win32/installer/Makefile.am: remove obsolete file (more from patch
         #3575831) (Sergio).
20121015 configure.ac: replace obsolete macros: AC_CANONICAL_SYSTEM and
         AC_PROG_LIBTOOL (more from patch #3575831) (Sergio).
20121015 Makefile.am,acinclude.m4,autogen.sh,configure.ac,m4/{glib-2.0.m4,
         gtk-2.0.m4,libxml.m4,pkg.m4,sdl.m4}: split acinclude.m4 in files in a
         m4 directory; acinclude.m4 has been removed (more from patch #3575831)
         (Sergio).
20121016 Makefile.am: distribute m4 directory and contents with the release
         tarball (Fred).
20121028 sound/coreaudiosound.c: migrate away from some deprecated APIs (Fred).
20121107 ui/xlib/{Makefile.am,xstatusbar.pl}: fix the build when source and
         build trees are different (VPATH) (bug #3584527) (Sergio).